--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ffi": "^2.0.0"
+    "ffi": "^2.0.0",
+    "ref": "^1.2.0",
+    "ref-struct": "^1.0.2"
   }
 }
